--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "iconsax-react-native": "^0.0.8",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.0.0"
   },
   "devDependencies": {
